Add timeout to nTask
