# docs/swagger.json
@@ -630,6 +630,10 @@
                     "description": "pending, running, done, failed, deleted",
                     "type": "string"
                 },
+                "timeout": {
+                    "description": "timeout in seconds",
+                    "type": "integer"
+                },
                 "updatedAt": {
                     "type": "string"
                 },
@@ -663,6 +667,10 @@
                     "type": "string"
                 },
                 "priority": {
+                    "type": "integer"
+                },
+                "timeout": {
+                    "description": "timeout in seconds",
                     "type": "integer"
                 }
             }
